--- a/Crackle/Components/Pages/FoodRecallExplorer.razor
+++ b/Crackle/Components/Pages/FoodRecallExplorer.razor
@@ -9,30 +9,35 @@
 @inject HttpClient Http
 @inject NavigationManager NavManager
 
-<SfChart>
-    <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
-    <ChartSeriesCollection>
-        <ChartSeries DataSource="@stateRecallCounts" XName="State" YName="RecallCount" Type="ChartSeriesType.Column" />
-    </ChartSeriesCollection>
-     <ChartTooltipSettings Enable="true"></ChartTooltipSettings>
-</SfChart>
-
-<div class="grid" tabindex="-1">
-    <QuickGrid ItemsProvider="@foodRecallProvider" Virtualize="true" Pagination="@pagination" >
-        <PropertyColumn Title="ID" Property="@(c => c.Event_Id)" />
-        <PropertyColumn Property="@(c => c.State)" />
-        <PropertyColumn Property="@(c => c.City)" />
-        <PropertyColumn Title="Company" Property="@(c => c.Recalling_Firm)" />
-        <PropertyColumn Property="@(c => c.Status)" />
-    </QuickGrid>
+<div class=container>
+    <div class=chart-container>
+        <SfChart>
+            <ChartPrimaryXAxis ValueType="Syncfusion.Blazor.Charts.ValueType.Category"></ChartPrimaryXAxis>
+            <ChartSeriesCollection>
+                <ChartSeries DataSource="@stateRecallCounts" XName="State" YName="RecallCount" Type="ChartSeriesType.Column" />
+            </ChartSeriesCollection>
+             <ChartTooltipSettings Enable="true"></ChartTooltipSettings>
+        </SfChart>
+    </div>
+    <div></div>
+    <div class="grid-container" tabindex="-1">
+        <QuickGrid ItemsProvider="@foodRecallProvider" Virtualize="true" Pagination="@pagination" class="custom-grid">
+            <PropertyColumn Title="ID" Property="@(c => c.Event_Id)" />
+            <PropertyColumn Property="@(c => c.State)" />
+            <PropertyColumn Property="@(c => c.City)" />
+            <PropertyColumn Title="Company" Property="@(c => c.Recalling_Firm)" />
+            <PropertyColumn Property="@(c => c.Status)" />
+        </QuickGrid>
+    </div>
 </div>
+
 
 <p>Total: <strong>@numResults recalls found</strong></p>
 
 <Paginator State="@pagination" />
 
 @code {
-    private PaginationState pagination = new PaginationState { ItemsPerPage = 10 }; // Set items per page
+    private PaginationState pagination = new PaginationState { ItemsPerPage = 50 }; // Set items per page
 
     GridItemsProvider<FoodRecall>? foodRecallProvider;
     int numResults;
