--- a/Crackle/Components/Layout/NavMenu.razor
+++ b/Crackle/Components/Layout/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="foodrecallstatus">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Food Recall Summary
+            </NavLink>
+        </div>
     </nav>
 </div>
 
